--- a/app/templates/tab-calendar.html
+++ b/app/templates/tab-calendar.html
@@ -1,5 +1,21 @@
 <ion-view view-title="Calendar">
     <ion-content>
-       calendar
+        Calendar
+        <ion-list>
+            <div ng-repeat="(date, events) in events">
+                <div class="item item-divider">
+                    {{date | date:'dd/MM/yyyy'}}
+                </div>
+                <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+                    <img ng-src="{{ event.image }}">
+                    <h2>{{ event.title }}</h2>
+                    <!--<p>{{chat.lastText}}</p>-->
+                    <i class="icon ion-chevron-right icon-accessory"></i>
+                    <ion-option-button class="button-assertive" ng-click="remove(chat)">
+                        Delete
+                    </ion-option-button>
+                </ion-item>
+            </div>
+        </ion-list>
     </ion-content>
 </ion-view>
