--- a/app/templates/tab-calendar.html
+++ b/app/templates/tab-calendar.html
@@ -6,7 +6,7 @@
                 <div class="item item-divider">
                     {{date | date:'dd/MM/yyyy'}}
                 </div>
-                <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+                <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/eventdetail/1">
                     <img ng-src="{{ event.image }}">
                     <h2>{{ event.title }}</h2>
                     <!--<p>{{chat.lastText}}</p>-->
