--- a/app/templates/event-detail.html
+++ b/app/templates/event-detail.html
@@ -3,6 +3,7 @@
        <div ng-repeat="section in event.description">
            <div ng-bind-html="section">
            </div>
+           venue rating = {{event.venue.Rating}}
        </div>
     </ion-content>
 </ion-view>
