--- a/app/templates/tab-events.html
+++ b/app/templates/tab-events.html
@@ -5,7 +5,7 @@
             <!--{{ vm.events | json }}-->
         <!--</pre>-->
         <td-cards>
-            <td-card ng-repeat="event in vm.events" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
+            <td-card ng-repeat="event in vm.eventsService.events" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
                 <h3>{{ event.title }}</h3>
                 <p>{{ event.venue.Rating }}</p>
                 <p>Name: {{ event.venueName }}</p>
