--- a/app/templates/tab-calendar.html
+++ b/app/templates/tab-calendar.html
@@ -12,8 +12,8 @@
 
                     <!--<p>{{chat.lastText}}</p>-->
                     <i class="icon ion-chevron-right icon-accessory"></i>
-                    <ion-option-button class="button-assertive" ng-click="remove(chat)">
-                        Delete
+                    <ion-option-button class="button-energized" ng-click="remove(date, event.title)">
+                        Done
                     </ion-option-button>
                 </ion-item>
             </div>
