--- a/app/templates/tab-setting.html
+++ b/app/templates/tab-setting.html
@@ -11,5 +11,6 @@
                 </label>
             </li>
         </ul>
+        <button class="button button-block button-assertive" ng-click="clearAll()"> Clear All</button>
     </ion-content>
 </ion-view>
