--- a/app/templates/event-detail.html
+++ b/app/templates/event-detail.html
@@ -1,9 +1,9 @@
 <ion-view view-title="{{event.title}}">
     <ion-content class="padding">
-        <div ng-repeat="section in event.description">
-            <div ng-bind-html="section">
+        <!-- <div ng-repeat="section in event.description"> -->
+            <div ng-bind-html="event.description[0]">
             </div>
-        </div>
+        <!-- </div> -->
         <div>
             venue rating = {{event.venue.Rating}}
         </div>
