--- a/app/templates/tab-calendar.html
+++ b/app/templates/tab-calendar.html
@@ -5,12 +5,19 @@
                 <div class="item item-divider">
                     {{date | date:'dd/MM/yyyy'}}
                 </div>
-                <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/eventdetail/{{event.title}}">
+<!--                 <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/eventdetail/{{event.title}}">
                     <img ng-src="{{ event.image }}">
                     <h2>{{ event.title }}</h2>
-
                     <p>{{event.startDate | date: 'shortTime'}} - {{event.endDate | date: 'shortTime'}}</p>
-        
+                    <i class="icon ion-chevron-right icon-accessory"></i>
+                    <ion-option-button class="button-energized" ng-click="remove(date, event.title)">
+                        Done
+                    </ion-option-button>
+                </ion-item> -->
+                <ion-item class="item-remove-animate item-thumbnail-left" ng-repeat="event in events" type="item-text-wrap" href="#/tab/eventdetail/{{event.title}}">
+                    <img ng-src="{{ event.image }}" style=" border-radius: 15px;">
+                    <h2>{{ event.title }}</h2>
+                    <p>{{event.startDate | date: 'shortTime'}} - {{event.endDate | date: 'shortTime'}}</p>
                     <i class="icon ion-chevron-right icon-accessory"></i>
                     <ion-option-button class="button-energized" ng-click="remove(date, event.title)">
                         Done
