--- a/app/templates/tab-events.html
+++ b/app/templates/tab-events.html
@@ -22,6 +22,19 @@
                 </div>
             </td-card>
         </td-cards>
+
+
+        <div class="testbox" style="text-align: center;">
+            <button ng-click="vm.manualNopeEvent()" class="button button-assertive" style="float:left;">
+                <i class="icon ion-close-round"></i>
+            </button>
+            <button ng-click="vm.showEventInfo()" class="button button-calm">
+                <i class="icon ion-information"></i>
+            </button>
+            <button ng-click="vm.manualLikeEvent()" class="button button-balanced" style="float:right;">
+                <i class="icon ion-checkmark-round"></i>
+            </button>
+        </div>
         <!--{{ vm.hello }}-->
         <!--<div class="list card" ng-repeat="event in vm.events">-->
         <!--<div class="item item-divider">{{ event.title }}</div>-->
