--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,7 +44,9 @@ tdcard {
   left: 50%;
   margin-left: -150px;
   padding: 20px;
-  border: 1px solid grey;
+  border: 1px solid #999;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
   margin-top: 400px;
 }
 td-card .image {
@@ -63,8 +65,11 @@ td-card .card-image {
     left: 10px;
     font-size: 30px;
     font-weight: bold;
-    color: rgb(111, 250, 111);
+    color: #28a54c;
+  background-color: white;
     opacity: 0;
+    padding: 5px;
+    border: 5px solid #28a54c;
 }
 
 .no-text {
@@ -74,7 +79,10 @@ td-card .card-image {
     font-size: 30px;
     font-weight: bold;
     color: rgb(255, 115, 115);
+  background-color: white;
     opacity: 0;
+    padding: 5px;
+    border: 5px solid rgb(255, 115, 115);
 }
 
 .fade {
