refactor(accessibility): change the look of the accessibility icons

--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -4,6 +4,6 @@
     </div>
     <!-- </div> -->
     <div>
-        venue rating = {{event.venue.Rating}}
+        <img class="" src="images/wheelchair.png" style="width:20px; height:20px;"> Wheelchair Accessibility Rating: ({{ event.venue.Rating }})
     </div>
 </div>
