--- a/app/templates/tab-events.html
+++ b/app/templates/tab-events.html
@@ -17,7 +17,7 @@
                         <span style="font-weight:bold;"> Price: </span><span>{{event.price}}</span>
                     </div>
                     <div ng-show="event.venue.Rating > 2">
-                        <img class="" src="images/wheelchair.png" style="width:20px; height:20px;">
+                        <img class="" src="images/wheelchair.png" style="width:20px; height:20px;"> Wheelchair Accessible ({{ event.venue.Rating }})
                     </div>
                 </div>
             </td-card>
