--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,11 @@ td-card {
     background-color: white;
     overflow: hidden;
 }
+
+.round-button {
+  padding: 3px 12px;
+  border-radius: 30px;
+}
 /*
 td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
