--- a/app/templates/tab-setting.html
+++ b/app/templates/tab-setting.html
@@ -12,5 +12,9 @@
             </li>
         </ul>
         <button class="button button-block button-assertive" ng-click="clearAll()"> Clear All</button>
+        <div>
+            <a href="https://thenounproject.com/search/?q=star&i=47905">icons by: Julien Deveaux</a>
+            
+        </div>
     </ion-content>
 </ion-view>
