--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,12 @@ td-card {
   overflow: hidden;
 }
 
+/* line 20, ../../app/styles/main.scss */
+.round-button {
+  padding: 3px 12px;
+  border-radius: 30px;
+}
+
 /*
 td-card.card-0 {
   -webkit-transform: translate3d(0, 0px, 0);
@@ -37,12 +43,12 @@ td-card.card-2 {
   z-index: 8;
 }
 */
-/* line 38, ../../app/styles/main.scss */
+/* line 43, ../../app/styles/main.scss */
 tdcard {
   margin-bottom: 20px;
 }
 
-/* line 41, ../../app/styles/main.scss */
+/* line 46, ../../app/styles/main.scss */
 .testbox {
   position: absolute;
   width: 300px;
@@ -55,19 +61,19 @@ tdcard {
   margin-top: 360px;
 }
 
-/* line 52, ../../app/styles/main.scss */
+/* line 57, ../../app/styles/main.scss */
 td-card .image {
   position: relative;
 }
 
-/* line 56, ../../app/styles/main.scss */
+/* line 61, ../../app/styles/main.scss */
 td-card .card-image {
   max-width: 100%;
   width: 100%;
   border-radius: 6px;
 }
 
-/* line 62, ../../app/styles/main.scss */
+/* line 67, ../../app/styles/main.scss */
 .yes-text {
   position: absolute;
   top: 10px;
@@ -81,7 +87,7 @@ td-card .card-image {
   border: 5px solid #28a54c;
 }
 
-/* line 75, ../../app/styles/main.scss */
+/* line 80, ../../app/styles/main.scss */
 .no-text {
   position: absolute;
   top: 10px;
@@ -95,7 +101,7 @@ td-card .card-image {
   border: 5px solid #ff7373;
 }
 
-/* line 88, ../../app/styles/main.scss */
+/* line 93, ../../app/styles/main.scss */
 .fade {
   transition: 0.2s opacity linear;
   opacity: 1;
