--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Events" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/dash">
+  <ion-tab title="Activities" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
